--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.png"
 exclude_filter=""
 patch_list=PoolStringArray(  )
 
@@ -25,3 +25,32 @@ application/product_name="Ante of the Gods"
 application/file_description="A submission for Ludum Dare 43"
 application/copyright=""
 application/trademarks=""
+
+[preset.1]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+patch_list=PoolStringArray(  )
+
+[preset.1.options]
+
+custom_package/debug=""
+custom_package/release="1.0"
+application/name="Ante of the Gods"
+application/info="Made with Godot Engine"
+application/icon="res://icon.png"
+application/identifier="org.godotengine.macgame"
+application/signature="godotmacgame"
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+application/bits_mode=0
+display/high_res=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
